amended #header img padding from 0px to 1px to prevent overflow onto navbar box-shadow

--- a/assets/css/paradesstyles.css
+++ b/assets/css/paradesstyles.css
@@ -63,10 +63,10 @@ body {
 	color: #000000;
 }
 
-#header img {
+/*#header img {
 	margin: 0px;
 	padding: 0px;
-}
+}*/
 
 
 #navigation {
