--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,6 +70,11 @@
     padding: 1.375rem 0.75rem;
 }
 
+#header img {
+	margin: 0px;
+	padding: 1px;
+}
+
 /*Alignment and positioning*/
 .inlineBlock {
     display: inline-block;
